// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hasOwnProperty default 1`] = `true`;

exports[`hasOwnProperty posix 1`] = `true`;

exports[`hasOwnProperty upath 1`] = `true`;

exports[`hasOwnProperty win32 1`] = `true`;

exports[`posix 1`] = `
PathWrap {
  "basename": [Function],
  "default": PathWrap {
    "PathWrap": [Function],
    "basename": [Function],
    "default": [Circular],
    "delimiter": ";",
    "dirname": [Function],
    "extname": [Function],
    "fn": PathWrap {
      "_makeLong": [Function],
      "delimiter": ":",
      "filterNameEntry": [Function],
      "fn": PathWrap {
        "basename": [Function],
        "constructor": [Function],
        "dirname": [Function],
        "extname": [Function],
        "fn": [Circular],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
      },
      "sep": "/",
      "vaildNameEntry": [Function],
    },
    "format": [Function],
    "isAbsolute": [Function],
    "join": [Function],
    "name": "upath",
    "node": Object {
      "_makeLong": [Function],
      "basename": [Function],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "posix": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ":",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": [Circular],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "win32": [Circular],
      },
      "relative": [Function],
      "resolve": [Function],
      "sep": "\\\\",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "win32": [Circular],
    },
    "normalize": [Function],
    "parse": [Function],
    "posix": [Circular],
    "relative": [Function],
    "resolve": [Function],
    "sep": "/",
    "toNamespacedPath": [Function],
    "upath": [Circular],
    "win32": PathWrap {
      "basename": [Function],
      "default": [Circular],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "fn": PathWrap {
        "_makeLong": [Function],
        "delimiter": ":",
        "filterNameEntry": [Function],
        "fn": PathWrap {
          "basename": [Function],
          "constructor": [Function],
          "dirname": [Function],
          "extname": [Function],
          "fn": [Circular],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
        },
        "sep": "/",
        "vaildNameEntry": [Function],
      },
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "name": "win32",
      "node": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ";",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": Object {
          "_makeLong": [Function],
          "basename": [Function],
          "delimiter": ":",
          "dirname": [Function],
          "extname": [Function],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "posix": [Circular],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
          "win32": [Circular],
        },
        "relative": [Function],
        "resolve": [Function],
        "sep": "\\\\",
        "toNamespacedPath": [Function],
        "upath": [Circular],
        "win32": [Circular],
      },
      "normalize": [Function],
      "parse": [Function],
      "posix": [Circular],
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "win32": [Circular],
    },
  },
  "delimiter": ":",
  "dirname": [Function],
  "extname": [Function],
  "fn": PathWrap {
    "_makeLong": [Function],
    "delimiter": ":",
    "filterNameEntry": [Function],
    "fn": PathWrap {
      "basename": [Function],
      "constructor": [Function],
      "dirname": [Function],
      "extname": [Function],
      "fn": [Circular],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
      "toNamespacedPath": [Function],
    },
    "sep": "/",
    "vaildNameEntry": [Function],
  },
  "format": [Function],
  "isAbsolute": [Function],
  "join": [Function],
  "name": "posix",
  "node": Object {
    "_makeLong": [Function],
    "basename": [Function],
    "delimiter": ";",
    "dirname": [Function],
    "extname": [Function],
    "format": [Function],
    "isAbsolute": [Function],
    "join": [Function],
    "normalize": [Function],
    "parse": [Function],
    "posix": Object {
      "_makeLong": [Function],
      "basename": [Function],
      "delimiter": ":",
      "dirname": [Function],
      "extname": [Function],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "posix": [Circular],
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
      "toNamespacedPath": [Function],
      "win32": [Circular],
    },
    "relative": [Function],
    "resolve": [Function],
    "sep": "\\\\",
    "toNamespacedPath": [Function],
    "upath": PathWrap {
      "PathWrap": [Function],
      "basename": [Function],
      "default": [Circular],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "fn": PathWrap {
        "_makeLong": [Function],
        "delimiter": ":",
        "filterNameEntry": [Function],
        "fn": PathWrap {
          "basename": [Function],
          "constructor": [Function],
          "dirname": [Function],
          "extname": [Function],
          "fn": [Circular],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
        },
        "sep": "/",
        "vaildNameEntry": [Function],
      },
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "name": "upath",
      "node": [Circular],
      "normalize": [Function],
      "parse": [Function],
      "posix": [Circular],
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "win32": PathWrap {
        "basename": [Function],
        "default": [Circular],
        "delimiter": ";",
        "dirname": [Function],
        "extname": [Function],
        "fn": PathWrap {
          "_makeLong": [Function],
          "delimiter": ":",
          "filterNameEntry": [Function],
          "fn": PathWrap {
            "basename": [Function],
            "constructor": [Function],
            "dirname": [Function],
            "extname": [Function],
            "fn": [Circular],
            "format": [Function],
            "isAbsolute": [Function],
            "join": [Function],
            "normalize": [Function],
            "parse": [Function],
            "relative": [Function],
            "resolve": [Function],
            "sep": "/",
            "toNamespacedPath": [Function],
          },
          "sep": "/",
          "vaildNameEntry": [Function],
        },
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "name": "win32",
        "node": [Circular],
        "normalize": [Function],
        "parse": [Function],
        "posix": [Circular],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "upath": [Circular],
        "win32": [Circular],
      },
    },
    "win32": [Circular],
  },
  "normalize": [Function],
  "parse": [Function],
  "posix": [Circular],
  "relative": [Function],
  "resolve": [Function],
  "sep": "/",
  "toNamespacedPath": [Function],
  "upath": PathWrap {
    "PathWrap": [Function],
    "basename": [Function],
    "default": [Circular],
    "delimiter": ";",
    "dirname": [Function],
    "extname": [Function],
    "fn": PathWrap {
      "_makeLong": [Function],
      "delimiter": ":",
      "filterNameEntry": [Function],
      "fn": PathWrap {
        "basename": [Function],
        "constructor": [Function],
        "dirname": [Function],
        "extname": [Function],
        "fn": [Circular],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
      },
      "sep": "/",
      "vaildNameEntry": [Function],
    },
    "format": [Function],
    "isAbsolute": [Function],
    "join": [Function],
    "name": "upath",
    "node": Object {
      "_makeLong": [Function],
      "basename": [Function],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "posix": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ":",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": [Circular],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "win32": [Circular],
      },
      "relative": [Function],
      "resolve": [Function],
      "sep": "\\\\",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "win32": [Circular],
    },
    "normalize": [Function],
    "parse": [Function],
    "posix": [Circular],
    "relative": [Function],
    "resolve": [Function],
    "sep": "/",
    "toNamespacedPath": [Function],
    "upath": [Circular],
    "win32": PathWrap {
      "basename": [Function],
      "default": [Circular],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "fn": PathWrap {
        "_makeLong": [Function],
        "delimiter": ":",
        "filterNameEntry": [Function],
        "fn": PathWrap {
          "basename": [Function],
          "constructor": [Function],
          "dirname": [Function],
          "extname": [Function],
          "fn": [Circular],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
        },
        "sep": "/",
        "vaildNameEntry": [Function],
      },
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "name": "win32",
      "node": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ";",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": Object {
          "_makeLong": [Function],
          "basename": [Function],
          "delimiter": ":",
          "dirname": [Function],
          "extname": [Function],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "posix": [Circular],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
          "win32": [Circular],
        },
        "relative": [Function],
        "resolve": [Function],
        "sep": "\\\\",
        "toNamespacedPath": [Function],
        "upath": [Circular],
        "win32": [Circular],
      },
      "normalize": [Function],
      "parse": [Function],
      "posix": [Circular],
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "win32": [Circular],
    },
  },
  "win32": PathWrap {
    "basename": [Function],
    "default": PathWrap {
      "PathWrap": [Function],
      "basename": [Function],
      "default": [Circular],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "fn": PathWrap {
        "_makeLong": [Function],
        "delimiter": ":",
        "filterNameEntry": [Function],
        "fn": PathWrap {
          "basename": [Function],
          "constructor": [Function],
          "dirname": [Function],
          "extname": [Function],
          "fn": [Circular],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
        },
        "sep": "/",
        "vaildNameEntry": [Function],
      },
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "name": "upath",
      "node": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ";",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": Object {
          "_makeLong": [Function],
          "basename": [Function],
          "delimiter": ":",
          "dirname": [Function],
          "extname": [Function],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "posix": [Circular],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
          "win32": [Circular],
        },
        "relative": [Function],
        "resolve": [Function],
        "sep": "\\\\",
        "toNamespacedPath": [Function],
        "upath": [Circular],
        "win32": [Circular],
      },
      "normalize": [Function],
      "parse": [Function],
      "posix": [Circular],
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "win32": [Circular],
    },
    "delimiter": ";",
    "dirname": [Function],
    "extname": [Function],
    "fn": PathWrap {
      "_makeLong": [Function],
      "delimiter": ":",
      "filterNameEntry": [Function],
      "fn": PathWrap {
        "basename": [Function],
        "constructor": [Function],
        "dirname": [Function],
        "extname": [Function],
        "fn": [Circular],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
      },
      "sep": "/",
      "vaildNameEntry": [Function],
    },
    "format": [Function],
    "isAbsolute": [Function],
    "join": [Function],
    "name": "win32",
    "node": Object {
      "_makeLong": [Function],
      "basename": [Function],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "posix": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ":",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": [Circular],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "win32": [Circular],
      },
      "relative": [Function],
      "resolve": [Function],
      "sep": "\\\\",
      "toNamespacedPath": [Function],
      "upath": PathWrap {
        "PathWrap": [Function],
        "basename": [Function],
        "default": [Circular],
        "delimiter": ";",
        "dirname": [Function],
        "extname": [Function],
        "fn": PathWrap {
          "_makeLong": [Function],
          "delimiter": ":",
          "filterNameEntry": [Function],
          "fn": PathWrap {
            "basename": [Function],
            "constructor": [Function],
            "dirname": [Function],
            "extname": [Function],
            "fn": [Circular],
            "format": [Function],
            "isAbsolute": [Function],
            "join": [Function],
            "normalize": [Function],
            "parse": [Function],
            "relative": [Function],
            "resolve": [Function],
            "sep": "/",
            "toNamespacedPath": [Function],
          },
          "sep": "/",
          "vaildNameEntry": [Function],
        },
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "name": "upath",
        "node": [Circular],
        "normalize": [Function],
        "parse": [Function],
        "posix": [Circular],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "upath": [Circular],
        "win32": [Circular],
      },
      "win32": [Circular],
    },
    "normalize": [Function],
    "parse": [Function],
    "posix": [Circular],
    "relative": [Function],
    "resolve": [Function],
    "sep": "/",
    "toNamespacedPath": [Function],
    "upath": PathWrap {
      "PathWrap": [Function],
      "basename": [Function],
      "default": [Circular],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "fn": PathWrap {
        "_makeLong": [Function],
        "delimiter": ":",
        "filterNameEntry": [Function],
        "fn": PathWrap {
          "basename": [Function],
          "constructor": [Function],
          "dirname": [Function],
          "extname": [Function],
          "fn": [Circular],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
        },
        "sep": "/",
        "vaildNameEntry": [Function],
      },
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "name": "upath",
      "node": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ";",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": Object {
          "_makeLong": [Function],
          "basename": [Function],
          "delimiter": ":",
          "dirname": [Function],
          "extname": [Function],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "posix": [Circular],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
          "win32": [Circular],
        },
        "relative": [Function],
        "resolve": [Function],
        "sep": "\\\\",
        "toNamespacedPath": [Function],
        "upath": [Circular],
        "win32": [Circular],
      },
      "normalize": [Function],
      "parse": [Function],
      "posix": [Circular],
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "win32": [Circular],
    },
    "win32": [Circular],
  },
}
`;

exports[`posix 2`] = `
Array [
  "sep",
  "fn",
  "delimiter",
  "join",
  "normalize",
  "relative",
  "resolve",
  "parse",
  "format",
  "basename",
  "dirname",
  "extname",
  "isAbsolute",
  "toNamespacedPath",
  "name",
  "win32",
  "posix",
  "upath",
  "default",
  "node",
]
`;

exports[`win32 1`] = `
PathWrap {
  "basename": [Function],
  "default": PathWrap {
    "PathWrap": [Function],
    "basename": [Function],
    "default": [Circular],
    "delimiter": ";",
    "dirname": [Function],
    "extname": [Function],
    "fn": PathWrap {
      "_makeLong": [Function],
      "delimiter": ":",
      "filterNameEntry": [Function],
      "fn": PathWrap {
        "basename": [Function],
        "constructor": [Function],
        "dirname": [Function],
        "extname": [Function],
        "fn": [Circular],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
      },
      "sep": "/",
      "vaildNameEntry": [Function],
    },
    "format": [Function],
    "isAbsolute": [Function],
    "join": [Function],
    "name": "upath",
    "node": Object {
      "_makeLong": [Function],
      "basename": [Function],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "posix": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ":",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": [Circular],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "win32": [Circular],
      },
      "relative": [Function],
      "resolve": [Function],
      "sep": "\\\\",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "win32": [Circular],
    },
    "normalize": [Function],
    "parse": [Function],
    "posix": PathWrap {
      "basename": [Function],
      "default": [Circular],
      "delimiter": ":",
      "dirname": [Function],
      "extname": [Function],
      "fn": PathWrap {
        "_makeLong": [Function],
        "delimiter": ":",
        "filterNameEntry": [Function],
        "fn": PathWrap {
          "basename": [Function],
          "constructor": [Function],
          "dirname": [Function],
          "extname": [Function],
          "fn": [Circular],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
        },
        "sep": "/",
        "vaildNameEntry": [Function],
      },
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "name": "posix",
      "node": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ";",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": Object {
          "_makeLong": [Function],
          "basename": [Function],
          "delimiter": ":",
          "dirname": [Function],
          "extname": [Function],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "posix": [Circular],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
          "win32": [Circular],
        },
        "relative": [Function],
        "resolve": [Function],
        "sep": "\\\\",
        "toNamespacedPath": [Function],
        "upath": [Circular],
        "win32": [Circular],
      },
      "normalize": [Function],
      "parse": [Function],
      "posix": [Circular],
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "win32": [Circular],
    },
    "relative": [Function],
    "resolve": [Function],
    "sep": "/",
    "toNamespacedPath": [Function],
    "upath": [Circular],
    "win32": [Circular],
  },
  "delimiter": ";",
  "dirname": [Function],
  "extname": [Function],
  "fn": PathWrap {
    "_makeLong": [Function],
    "delimiter": ":",
    "filterNameEntry": [Function],
    "fn": PathWrap {
      "basename": [Function],
      "constructor": [Function],
      "dirname": [Function],
      "extname": [Function],
      "fn": [Circular],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
      "toNamespacedPath": [Function],
    },
    "sep": "/",
    "vaildNameEntry": [Function],
  },
  "format": [Function],
  "isAbsolute": [Function],
  "join": [Function],
  "name": "win32",
  "node": Object {
    "_makeLong": [Function],
    "basename": [Function],
    "delimiter": ";",
    "dirname": [Function],
    "extname": [Function],
    "format": [Function],
    "isAbsolute": [Function],
    "join": [Function],
    "normalize": [Function],
    "parse": [Function],
    "posix": Object {
      "_makeLong": [Function],
      "basename": [Function],
      "delimiter": ":",
      "dirname": [Function],
      "extname": [Function],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "posix": [Circular],
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
      "toNamespacedPath": [Function],
      "win32": [Circular],
    },
    "relative": [Function],
    "resolve": [Function],
    "sep": "\\\\",
    "toNamespacedPath": [Function],
    "upath": PathWrap {
      "PathWrap": [Function],
      "basename": [Function],
      "default": [Circular],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "fn": PathWrap {
        "_makeLong": [Function],
        "delimiter": ":",
        "filterNameEntry": [Function],
        "fn": PathWrap {
          "basename": [Function],
          "constructor": [Function],
          "dirname": [Function],
          "extname": [Function],
          "fn": [Circular],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
        },
        "sep": "/",
        "vaildNameEntry": [Function],
      },
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "name": "upath",
      "node": [Circular],
      "normalize": [Function],
      "parse": [Function],
      "posix": PathWrap {
        "basename": [Function],
        "default": [Circular],
        "delimiter": ":",
        "dirname": [Function],
        "extname": [Function],
        "fn": PathWrap {
          "_makeLong": [Function],
          "delimiter": ":",
          "filterNameEntry": [Function],
          "fn": PathWrap {
            "basename": [Function],
            "constructor": [Function],
            "dirname": [Function],
            "extname": [Function],
            "fn": [Circular],
            "format": [Function],
            "isAbsolute": [Function],
            "join": [Function],
            "normalize": [Function],
            "parse": [Function],
            "relative": [Function],
            "resolve": [Function],
            "sep": "/",
            "toNamespacedPath": [Function],
          },
          "sep": "/",
          "vaildNameEntry": [Function],
        },
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "name": "posix",
        "node": [Circular],
        "normalize": [Function],
        "parse": [Function],
        "posix": [Circular],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "upath": [Circular],
        "win32": [Circular],
      },
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "win32": [Circular],
    },
    "win32": [Circular],
  },
  "normalize": [Function],
  "parse": [Function],
  "posix": PathWrap {
    "basename": [Function],
    "default": PathWrap {
      "PathWrap": [Function],
      "basename": [Function],
      "default": [Circular],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "fn": PathWrap {
        "_makeLong": [Function],
        "delimiter": ":",
        "filterNameEntry": [Function],
        "fn": PathWrap {
          "basename": [Function],
          "constructor": [Function],
          "dirname": [Function],
          "extname": [Function],
          "fn": [Circular],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
        },
        "sep": "/",
        "vaildNameEntry": [Function],
      },
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "name": "upath",
      "node": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ";",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": Object {
          "_makeLong": [Function],
          "basename": [Function],
          "delimiter": ":",
          "dirname": [Function],
          "extname": [Function],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "posix": [Circular],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
          "win32": [Circular],
        },
        "relative": [Function],
        "resolve": [Function],
        "sep": "\\\\",
        "toNamespacedPath": [Function],
        "upath": [Circular],
        "win32": [Circular],
      },
      "normalize": [Function],
      "parse": [Function],
      "posix": [Circular],
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "win32": [Circular],
    },
    "delimiter": ":",
    "dirname": [Function],
    "extname": [Function],
    "fn": PathWrap {
      "_makeLong": [Function],
      "delimiter": ":",
      "filterNameEntry": [Function],
      "fn": PathWrap {
        "basename": [Function],
        "constructor": [Function],
        "dirname": [Function],
        "extname": [Function],
        "fn": [Circular],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
      },
      "sep": "/",
      "vaildNameEntry": [Function],
    },
    "format": [Function],
    "isAbsolute": [Function],
    "join": [Function],
    "name": "posix",
    "node": Object {
      "_makeLong": [Function],
      "basename": [Function],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "posix": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ":",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": [Circular],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "win32": [Circular],
      },
      "relative": [Function],
      "resolve": [Function],
      "sep": "\\\\",
      "toNamespacedPath": [Function],
      "upath": PathWrap {
        "PathWrap": [Function],
        "basename": [Function],
        "default": [Circular],
        "delimiter": ";",
        "dirname": [Function],
        "extname": [Function],
        "fn": PathWrap {
          "_makeLong": [Function],
          "delimiter": ":",
          "filterNameEntry": [Function],
          "fn": PathWrap {
            "basename": [Function],
            "constructor": [Function],
            "dirname": [Function],
            "extname": [Function],
            "fn": [Circular],
            "format": [Function],
            "isAbsolute": [Function],
            "join": [Function],
            "normalize": [Function],
            "parse": [Function],
            "relative": [Function],
            "resolve": [Function],
            "sep": "/",
            "toNamespacedPath": [Function],
          },
          "sep": "/",
          "vaildNameEntry": [Function],
        },
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "name": "upath",
        "node": [Circular],
        "normalize": [Function],
        "parse": [Function],
        "posix": [Circular],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "upath": [Circular],
        "win32": [Circular],
      },
      "win32": [Circular],
    },
    "normalize": [Function],
    "parse": [Function],
    "posix": [Circular],
    "relative": [Function],
    "resolve": [Function],
    "sep": "/",
    "toNamespacedPath": [Function],
    "upath": PathWrap {
      "PathWrap": [Function],
      "basename": [Function],
      "default": [Circular],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "fn": PathWrap {
        "_makeLong": [Function],
        "delimiter": ":",
        "filterNameEntry": [Function],
        "fn": PathWrap {
          "basename": [Function],
          "constructor": [Function],
          "dirname": [Function],
          "extname": [Function],
          "fn": [Circular],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
        },
        "sep": "/",
        "vaildNameEntry": [Function],
      },
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "name": "upath",
      "node": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ";",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": Object {
          "_makeLong": [Function],
          "basename": [Function],
          "delimiter": ":",
          "dirname": [Function],
          "extname": [Function],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "posix": [Circular],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
          "win32": [Circular],
        },
        "relative": [Function],
        "resolve": [Function],
        "sep": "\\\\",
        "toNamespacedPath": [Function],
        "upath": [Circular],
        "win32": [Circular],
      },
      "normalize": [Function],
      "parse": [Function],
      "posix": [Circular],
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "win32": [Circular],
    },
    "win32": [Circular],
  },
  "relative": [Function],
  "resolve": [Function],
  "sep": "/",
  "toNamespacedPath": [Function],
  "upath": PathWrap {
    "PathWrap": [Function],
    "basename": [Function],
    "default": [Circular],
    "delimiter": ";",
    "dirname": [Function],
    "extname": [Function],
    "fn": PathWrap {
      "_makeLong": [Function],
      "delimiter": ":",
      "filterNameEntry": [Function],
      "fn": PathWrap {
        "basename": [Function],
        "constructor": [Function],
        "dirname": [Function],
        "extname": [Function],
        "fn": [Circular],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
      },
      "sep": "/",
      "vaildNameEntry": [Function],
    },
    "format": [Function],
    "isAbsolute": [Function],
    "join": [Function],
    "name": "upath",
    "node": Object {
      "_makeLong": [Function],
      "basename": [Function],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "posix": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ":",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": [Circular],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "win32": [Circular],
      },
      "relative": [Function],
      "resolve": [Function],
      "sep": "\\\\",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "win32": [Circular],
    },
    "normalize": [Function],
    "parse": [Function],
    "posix": PathWrap {
      "basename": [Function],
      "default": [Circular],
      "delimiter": ":",
      "dirname": [Function],
      "extname": [Function],
      "fn": PathWrap {
        "_makeLong": [Function],
        "delimiter": ":",
        "filterNameEntry": [Function],
        "fn": PathWrap {
          "basename": [Function],
          "constructor": [Function],
          "dirname": [Function],
          "extname": [Function],
          "fn": [Circular],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
        },
        "sep": "/",
        "vaildNameEntry": [Function],
      },
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "name": "posix",
      "node": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ";",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": Object {
          "_makeLong": [Function],
          "basename": [Function],
          "delimiter": ":",
          "dirname": [Function],
          "extname": [Function],
          "format": [Function],
          "isAbsolute": [Function],
          "join": [Function],
          "normalize": [Function],
          "parse": [Function],
          "posix": [Circular],
          "relative": [Function],
          "resolve": [Function],
          "sep": "/",
          "toNamespacedPath": [Function],
          "win32": [Circular],
        },
        "relative": [Function],
        "resolve": [Function],
        "sep": "\\\\",
        "toNamespacedPath": [Function],
        "upath": [Circular],
        "win32": [Circular],
      },
      "normalize": [Function],
      "parse": [Function],
      "posix": [Circular],
      "relative": [Function],
      "resolve": [Function],
      "sep": "/",
      "toNamespacedPath": [Function],
      "upath": [Circular],
      "win32": [Circular],
    },
    "relative": [Function],
    "resolve": [Function],
    "sep": "/",
    "toNamespacedPath": [Function],
    "upath": [Circular],
    "win32": [Circular],
  },
  "win32": [Circular],
}
`;

exports[`win32 2`] = `
Array [
  "sep",
  "fn",
  "delimiter",
  "join",
  "normalize",
  "relative",
  "resolve",
  "parse",
  "format",
  "basename",
  "dirname",
  "extname",
  "isAbsolute",
  "toNamespacedPath",
  "name",
  "win32",
  "posix",
  "upath",
  "default",
  "node",
]
`;
